--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,56 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    font-family: 'Raleway', sans-serif;
+    background-color: hsl(229, 57%, 11%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+}
+
+.container {
+    max-width: 920px;
+    margin: 0 auto;
+    height: max-content;
+    display: flex;
+}
+
+.container .logobox {
+    width: 350px;
+    height: 200px;
+    border-radius: 10px;
+    background-color: hsl(228, 56%, 26%);
+    padding: 32px;
+    border-top-right-radius: 100px;
+}
+
+.container .logobox nav ul {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    margin-top: 30px;
+}
+
+.container .logobox nav ul li {
+    height: 50px;
+    width: 50px;
+    padding: 12px;
+    background-color: hsl(229, 57%, 11%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 14px;
+    border-radius: 8px;
+}
+
+.attribution { 
+    font-size: 11px; 
+    text-align: center;
+}
+.attribution a { 
+    color: hsl(228, 45%, 44%); 
+}
